# prose-diff-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/prosediff_viewer/: __init__.py  cli.py  diff.py  server.py  sources.py
src/prosediff_viewer/static/: index.html  viewer.css  viewer.js
